# productiviy-pro

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  COMMERCIAL_FEATURE_PLAN.md  COMMERCIAL_LAUNCH_PLAN.md  COMPLETE_COMMERCIAL_PLAN.md  ISSUE_FIX_PLAN.md  MASTER_PLAN.md  PRODUCTIFY_PRO_SPECIFICATION.md  PRODUCTION_READINESS_PLAN.md  README.md  REPOSITORIES_LIST.md  coolify.json  docker-compose.yml  package-lock.json  package.json  plan.md
.claude/: conversation.md
.github/workflows/: backend-ci.yml  build-desktop.yml  ci.yml  desktop-build.yml
apps/backend/: .dockerignore  .env.example  .env.production  Dockerfile  alembic.ini  docker-compose.yaml  docker-compose.yml  pytest.ini  requirements.txt  run.py
apps/backend/alembic/: env.py
apps/backend/app/: __init__.py  main.py
apps/backend/migrations/: 001_initial_schema.sql  README.md
apps/desktop/: .env.production  .env.production.backup  TIMING_ACCURACY_PLAN.md  index.html  package.json  tailwind.config.js  test-app.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: activity_tracker.rs  aw_server.rs  commands.rs  main.rs  state.rs  tray.rs
apps/extension/: background.js  content.js  manifest.json  popup.html  popup.js
apps/landing/: .dockerignore  Dockerfile  docker-compose.yaml  next.config.js  package.json  tailwind.config.js
docs/: 01-APP-STATUS-REPORT.md  02-USER-FEATURE-GUIDE.md  03-API-REFERENCE.md  04-DEPLOYMENT-GUIDE.md  05-DATABASE-SCHEMA.md  06-SECURITY-CHECKLIST.md  team-feature-plan.md
docs/v1.1.0-plan/: 00-overview.md  01-database.md  02-backend.md  03-client-logic.md  04-ui.md  05-admin-dashboard.md  06-implementation-tasks.md  07-dashboard-wireframe.md  index.html
scripts/: build.sh  deploy.sh  release.sh
(+279 files in other folders)
