[package]
name = "productify-pro"
version = "0.1.0"
description = "AI-Powered PC Monitoring & Productivity Tracking"
authors = ["Productify Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Native activity tracking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.3"

# Windows native APIs (for future Windows support)
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_SystemInformation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
